@@ -1,2 +1,15 @@
 # Car-Agency-Management-System
-This program is developed to manage a Car Agency with its different departments, the program is fully developed using java and the GUI screens are developed using javafx.
+This project was made by me and my colleagues as a small demonstration of a car agency managment system with its different departments and job roles.
+# To Run this program in intellij 
+1. go to edit run configuration
+2. add a new edit configuration and choose application
+3. choose your jdk version
+4. then click modify options and tick add vm options
+5. in the add vm options text box paste this line: --module-path "the path of your jdk lib" --add-modules javafx.controls,javafx.fxml
+6. in the main class text box type Controllers.Main
+# Login Data
+*    Manager          Username: Manager   /  Password: Admin
+*    Service          Username: Service   /  Password: Admin
+*    Logistics        Username: Logistics /   Password: Admin
+*    Sales            Username: Sales     /   Password: Admin
+*    HR               Username: Hr        /   Password: Admin
